# gemstone_lang

./: Cargo.toml
modules/: main.gem
shared/lexical_analyzer/: Cargo.toml
shared/lexical_analyzer/src/: lib.rs
shared/module_manager/: Cargo.toml
shared/module_manager/src/: lib.rs
shared/parser/: Cargo.toml
shared/parser/src/: lib.rs
shared/preprocessor/: Cargo.toml
shared/preprocessor/src/: lib.rs
shared/span/src/: lib.rs
shared/typer/: Cargo.toml
shared/typer/src/: lib.rs
src/: main.rs
